# django_ca

./: .environ  .gitignore  README.md  cookbook.yaml  django_ca.yaml  p-lock.toml  pyproject.toml
.github/workflows/: lint.yml  tests.yml
.gitlab/: tests.yml
docs/: README.md
src/django_ca/: settings.py  urls.py
src/django_ca/accounts/: apps.py  models.py
src/django_ca/accounts/management/commands/: create_ca.py
src/django_ca/accounts/migrations/: 0001_initial.py
src/django_ca/certificates/: apps.py  models.py  types.py  urls.py  utils.py  views.py
src/django_ca/certificates/management/commands/: create_ca_cert.py
src/django_ca/certificates/migrations/: 0001_initial.py
src/django_ca/certificates/templates/certificates/: base.html  certificates.html
src/django_ca/home/: apps.py
src/django_ca/home/management/commands/: checkmigrations.py  makemigrations.py
src/django_ca/lib/: apps.py  choices.py  models.py  types.py  utils.py  views.py
tests/: conftest.py
tests/django_ca/accounts/: test_models.py
tests/django_ca/lib/: test_choices.py  test_models.py  test_utils.py
tests/helpers/factories/: account_factories.py
