[build-system]
requires = [
    "phosphorus>=0.8",
]
build-backend = "phosphorus.construction.api"

[project]
name = "django_ca"
version = "1.0.0"

authors = [
    { name = "OnePesu tech team", email = "tech@kuma.ai" },
]
license = { text = "BSD-3-Clause" }

readme = "docs/README.md"
description = "Local CA"

requires-python = ">=3.13"
dependencies = [
    "authlib~=1.3.2",
    "dj_settings~=6.0.0",
    "django~=5.1.2",
    "django_cors_headers~=4.6.0",
    "django_stubs_ext~=5.1.1",
    "gunicorn~=23.0.0",
    "pathurl~=0.8.0",
    "psycopg~=3.2.3",
    "pyjwt~=2.9.0",
    "pyopenssl~=24.2.1",
    "pyutilkit~=0.6.0",
    "uvicorn~=0.32.0",
]

[tool.phosphorus.dev-dependencies]
dev = [
    "django-extensions~=3.2",
    "ipdb~=0.13",
    "ipython~=8.29",
    "watchfiles~=0.24",
    "werkzeug~=3.1",
]
lint = [
    "black~=24.10",
    "django-stubs~=5.1",
    "mypy~=1.13",
    "ruff~=0.8",
    "types-python-dateutil~=2.9",
]
test = [
    "factorio~=0.6",
    "freezegun~=1.5",
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "pytest-cov~=6.0",
    "pytest-django~=4.9",
]

[tool.black]
target-version = [
    "py313",
]

[tool.mypy]
exclude = "/migrations/"

check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

plugins = [
    "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "django_ca.settings"

[tool.ruff]
src = [
    "src",
]
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "ANN401",
    "COM812",
    "E501",
    "FIX002",
    "PLR09",
    "TD002",
    "TD003",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PLR2004",
    "PT011",
    "S101",
    "S105",
    "S106",
]
"**/migrations/**" = [
    "RUF001",
    "RUF012",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "django",
    "first-party",
    "tests",
]
split-on-trailing-comma = false

[tool.ruff.lint.isort.sections]
"django" = [
    "django",
]
"tests" = [
    "tests",
]

[tool.pytest.ini_options]
addopts = "-ra -v --reuse-db"
testpaths = "tests"

[tool.coverage.run]
branch = true
source = [
    "src/",
]
data_file = ".cov_cache/coverage.dat"
omit = [
    "src/django_ca/asgi.py",
    "src/django_ca/wsgi.py",
    "src/django_ca/settings.py",
    "src/django_ca/*/migrations/*",
    "src/django_ca/lib/workers.py",
    "src/django_ca/home/dashboard.py",
    "src/django_ca/home/management/commands/makemigrations.py",
    "src/django_ca/home/management/commands/checkmigrations.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]
fail_under = 50
precision = 2
show_missing = true
skip_covered = true
skip_empty = true
